tests/pact/bad/bad-dupe-def.repl
(module bad-dupe-def G
  (defcap G () true)
  (defschema a a:string)
  (defun a () true)
)
